[package]
name = "expansion-valve"
version = "0.0.0"
edition = "2021"
description = "Viewer and decompressor for Steam backup files"

[dependencies]
anyhow = "1"
byte-unit = { version = "5", default-features = false, features = ["byte"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
nom = "7"
sha1 = "0.10"
steam-vent-proto = "0.5"
zip = "2"
