[package]
name = "tev"
version = "0.1.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
edition = "2021"
description = "Tool for interacting with Steam backup files"
repository = "https://github.com/str4d/tev"
license = "MIT OR Apache-2.0"
keywords = ["backup", "mount"]
categories = ["command-line-utilities", "games"]

[dependencies]
anyhow = "1"
byte-unit = { version = "5", default-features = false, features = ["byte"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
nom = "7"
sha1 = "0.10"
steam-vent-proto = "0.5"
zip = "2"

# Mount
fuser = "0.15"
libc = "0.2"
