[package]
name = "tev"
version = "0.1.2"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
edition = "2021"
description = "Tool for interacting with Steam backup files"
repository = "https://github.com/str4d/tev"
license = "MIT OR Apache-2.0"
keywords = ["backup", "mount"]
categories = ["command-line-utilities", "games"]

[dependencies]
anyhow = "1"
byte-unit = { version = "5", default-features = false, features = ["byte"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
nom = "7"
sha1 = "0.10"
steam-vent-proto = "0.5"
zip = "2"

# Async
futures-util = "0.3"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "rt-multi-thread",
    "tracing",
] }

[target.'cfg(unix)'.dependencies]
fuser = "0.15"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
dokan = "0.3"
widestring = "1"
winapi = "0.3"

[patch.crates-io]
dokan = { git = "https://github.com/dokan-dev/dokan-rust.git", rev = "01a2b2e6b231f22798a22382037d97226265a448" }
dokan-sys = { git = "https://github.com/dokan-dev/dokan-rust.git", rev = "01a2b2e6b231f22798a22382037d97226265a448" }
